# 100-Days-Of-Rust

./: .gitignore  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: crr8ka671l5ljwq7v3b9sb3valkib94f-source  qkig73szmrhgp0qhncxy5vb36lw2g3jj-source  qn2bp2ipwdfsv5a4fp8sdk6kmibxhvsw-source  s4askz8kgqqaj7fvng364yckpbfmx9fa-source
.github/workflows/: build_nix.yml
Misc-Projects/password_generator/: Cargo.toml
Misc-Projects/reverser/: Cargo.toml
Misc-Projects/states_parser/: Cargo.toml
Week-01/Day-02_Finding-Nemo/: Cargo.toml
Week-02/Day-08_Letter-Combinations-Of-A-Phone-Number/: README.md
Week-02/Day-09_Trapping-Rain-Water/: README.md
Week-03/Day-18_Unique-Paths/: README.md
Week-03/Day-19_URL-Shortener/: README.md
Week-03/Day-21_Random-Maze-Generator/: README.md
Week-04/Day-22_Marcio-Mellos-Challenge/: README.md
Week-04/Day-23_The-Dining_Philosophers/: README.md
Week-04/Day-24_The-Josephus-Problem/: README.md
Week-05/Day-31_The-Time-In-Words/: README.md
Week-05/Day-33_WERTYU/: README.md
Week-06/Day-36_LCD-Display/: README.md
Week-06/Day-42_Drawing-Book/: README.md
Week-10/Day-67_Color-Maze/: README.md
Week-11/Day-72_L33tSpeak-Convertor/: README.md
Week-11/Day-74_CATTLEMETER/: README.md
Week-12/Day-81_Draw-The-G-Logo/: README.md
hello_rainbow/: Cargo.toml
password_generator/src/: main.rs
random_quote/: Cargo.toml
reverser/src/: main.rs
sha1_cracker/: Cargo.toml
sha1_cracker/src/: main.rs
(+12 files in other folders)
